# LinuxDev2020

03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  prog.c
05_Environmental/: CMakeLists.txt  pcre_prog.c  pcre_prog.h  window.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  my_unlinkat.c
08_TestingCoverage/: configure.ac
08_TestingCoverage/src/: buf.h
08_TestingCoverage/tests/: init_free_clear.ts
09_I18nL10n/: Makefile.am  configure.ac  guess.c  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  gen.py  guess.c  guess.md.in  ru.po
11_Toolkits/: Makefile  word_counter.c
12_ScriptingText/: configure.ac
12_ScriptingText/src/: Makefile.am  buf.h  libbuf.c
12_ScriptingText/tests/: Makefile.am  grow_trunc.ts  pop.ts  push.ts
13_PatchInstall/: Makefile.am  configure.ac  guess.c  guess.pot  ru.po
